# salary-tick

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: i18n.rs  main.rs  settings.rs
src-tauri/src/i18n/: en.ftl  zh.ftl
src/context/: settings.ts
src/pages/Root/: Root.tsx
src/pages/Root/components/NavLinks/: NavLinks.module.scss  NavLinks.tsx
src/pages/Settings/: Settings.tsx
